--- a/FactorioTransportBeltSimulator/index.html
+++ b/FactorioTransportBeltSimulator/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>FTBS v0.001</title>
-  <script src="ts/tools.js?v=0.001" type="text/javascript"></script>
-  <script src="ts/game.js?v=0.001" type="text/javascript"></script>
+  <title>FTBS v0.002</title>
+  <script src="/ts/tools.js?v=0.002" type="text/javascript"></script>
+  <script src="/ts/sprites.js?v=0.002" type="text/javascript"></script>
+  <script src="/ts/game.js?v=0.002" type="text/javascript"></script>
   <style>
     html, body, div
     {
