--- a/FactorioTransportBeltSimulator/index.html
+++ b/FactorioTransportBeltSimulator/index.html
@@ -2,10 +2,30 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>FTBS v0.005</title>
-  <script src="/ts/tools.js?v=0.005" type="text/javascript"></script>
-  <script src="/ts/sprites.js?v=0.005" type="text/javascript"></script>
-  <script src="/ts/game.js?v=0.005" type="text/javascript"></script>
+  <title>FTBS v0.006</title>
+  <script type="text/javascript">
+    function checkEs6()
+    {
+      try { Function("() => {};"); } catch (e) { return false; }
+      return true;
+    }
+
+    function loadScript(url)
+    {
+      var script = document.createElement("script");
+      script.src = url;
+      document.head.appendChild(script);
+    }
+
+    if (checkEs6())
+    {
+      loadScript("/ts/bundle.js?" + document.title);
+    }
+    else
+    {
+      loadScript("/ts/bundle-es5.js?" + document.title);
+    }
+  </script>
   <style>
     html, body, div
     {
@@ -15,6 +35,7 @@
       outline: none;
       width: 100%;
       height: 100%;
+      overflow: hidden;
     }
   </style>
 </head>
