--- a/FactorioTransportBeltSimulator/index.html
+++ b/FactorioTransportBeltSimulator/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>FTBS v0.016</title>
+  <title>FTBS v0.017</title>
   <script type="text/javascript">
     function checkEs6()
     {
@@ -22,26 +22,29 @@
     window.onload = function ()
     {
       var rnd = +new Date();
-      if (checkEs6())
-      {
-        loadScript("/js/bundle.min.js?" + rnd, function () { Game.run(); }, function ()
-        {
-          loadScript("/js/bundle.js?" + rnd, function () { Game.run(); }, function ()
-          {
-            loadScript("/js/bundle-es5.js?" + rnd, function () { Game.run(); });
-          });
-        });
-      }
-      else
-      {
-        loadScript("/js/fallback.js?" + rnd, function ()
-        {
-          loadScript("/js/bundle-es5.min.js?" + rnd, function () { Game.run(); }, function ()
-          {
-            loadScript("/js/bundle-es5.js?" + rnd, function () { Game.run(); });
-          });
-        });
-      }
+      //if (checkEs6())
+      //{
+      //  loadScript("/js/bundle.min.js?" + rnd, function () { Game.run(); }, function ()
+      //  {
+      //    loadScript("/js/bundle.js?" + rnd, function () { Game.run(); }, function ()
+      //    {
+      //      loadScript("/js/bundle-es5.js?" + rnd, function () { Game.run(); });
+      //    });
+      //  });
+      //}
+      //else
+      //{
+      //  loadScript("/js/fallback.js?" + rnd, function ()
+      //  {
+      //    loadScript("/js/bundle-es5.min.js?" + rnd, function () { Game.run(); }, function ()
+      //    {
+      //      loadScript("/js/bundle-es5.js?" + rnd, function () { Game.run(); });
+      //    });
+      //  });
+      //}
+
+      // --- debugging ---
+      loadScript("/js/bundle-es5.js?" + rnd, function () { Game.run(); });
     };
   </script>
   <style>
