--- a/FactorioTransportBeltSimulator/index.html
+++ b/FactorioTransportBeltSimulator/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>FTBS v0.020</title>
+  <title>FTBS v0.021</title>
+  <script src="/js/pako.min.js" type="text/javascript"></script>
   <script type="text/javascript">
     function checkEs6()
     {
